--- a/admin/Admin.html
+++ b/admin/Admin.html
@@ -19,6 +19,7 @@
     <main>
 
         <form id = "BlogForm">
+            <input type="poster" placeholder="Blog Poster Link:">
             <input type="text" placeholder="Blog Title:">
             <textarea rows="10" cols="40"  placeholder="Blog Desc:"></textarea>
             <input type="text" placeholder="Blog Author" >
