--- a/admin/Admin.html
+++ b/admin/Admin.html
@@ -26,6 +26,13 @@
             <button>Add Blog</button>
         </form>
 
+        <hr>
+        <section id = "BlogsContainer">
+
+            <!-- Content bY js -->
+   
+        </section>
+
         
     </main>
     
